--- a/About us.html
+++ b/About us.html
@@ -216,7 +216,7 @@
     <section class="success-section">
       <div class="section-header">
         <hr class="new13">
-        <h2>SUCCES STORIES</h2>
+        <h2>SUCCESS STORIES</h2>
         <hr class="new14">
       </div>
 
