--- a/empowering.html
+++ b/empowering.html
@@ -32,9 +32,9 @@
         <div class="empoweringbanner">
           <img src="teacher smile.png">
           <div class="empowering-text">
-            <h2>PROVIDING ACCESS TO EDUCATION</h2>
+            <h2>EMPOWERING TEACHERS AND COMMUNITIES</h2>
             <p>
-                To build sustainable and impactful change, teachers must be empowered as leaders, and communities must become active partners in their children’s learning journey. Through our Empowering Teachers and Communities program, PED equips teachers with skills, tools, and confidence.
+               To build sustainable and impactful change, teachers must be empowered as leaders, and communities must become active partners in their children’s learning journey. Through our Empowering Teachers and Communities program, PED equips teachers with skills, tools, and confidence.
             </p>
           </div>
         </div>
