--- a/empowering.html
+++ b/empowering.html
@@ -66,7 +66,7 @@
         <p class="intro-text">
           We are looking for passionate, dedicated teachers who are ready to bring knowledge, creativity, and hope to children in some of Papua’s most remote areas. If you believe that education can transform lives and you’re ready to be part of this meaningful journey, apply now to become a PED teacher!
         </p>
-        <a href="Take Action.html">
+        <a href="Take Action.html#teachers-requirement">
             <button class="buttonteachreq">MORE INFORMATION</button>
           </a>
       </section>
