--- a/Take Action.html
+++ b/Take Action.html
@@ -150,7 +150,7 @@
       </div>
     </section>
 
-    <section class="teachers-requirement">
+    <section id="teachers-requirement" class="teachers-requirement">
 
       <div
         style="display: flex; width: 100%; flex-direction: row; justify-content: space-between; align-items: center;">
