--- a/index.html
+++ b/index.html
@@ -191,9 +191,8 @@
 
   <div class="impact-cards">
     <div class="impact-box">
-      <h3><span>PARTNER WITH US</span></h3>
-      <p>We believe that collaboration creates impact 
-        And this is where you come in. By partnering with us, you become a vital part of a movement to provide better learning facilities, scholarships, educational programs, and resources for children across Papua.</p>
+      <h3><span>APPLY AS A TEACHER</span></h3>
+      <p>To build sustainable and impactful change, teachers must be empowered as leaders, and communities must become active partners in their children’s learning journey. Through our Empowering Teachers and Communities program, PED equips teachers with skills, tools, and confidence.</p>
         <div class="impact-link">
           <a href="Contact Us.html">MORE INFORMATION</a>
         </div>
