--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       <h3><span>APPLY AS A TEACHER</span></h3>
       <p>To build sustainable and impactful change, teachers must be empowered as leaders, and communities must become active partners in their children’s learning journey. Through our Empowering Teachers and Communities program, PED equips teachers with skills, tools, and confidence.</p>
         <div class="impact-link">
-          <a href="Contact Us.html">MORE INFORMATION</a>
+          <a href="Take Action.html#teachers-requirement">MORE INFORMATION</a>
         </div>
     </div>
     <div class="impact-box">
@@ -202,7 +202,7 @@
       <p>We believe that collaboration creates impact 
         And this is where you come in. By partnering with us, you become a vital part of a movement to provide better learning facilities, scholarships, educational programs, and resources for children across Papua.</p>
         <div class="impact-link">
-          <a href="Take Action.html">MORE INFORMATION</a>
+          <a href="Take Action.html#donate-section">MORE INFORMATION</a>
         </div>
     </div>
     <div class="impact-box">
@@ -211,7 +211,7 @@
         And this is where you come in. By partnering with us, you become a vital part of a movement to provide better learning facilities, scholarships, educational programs, and resources for children across Papua.</p>
       <div class="impact-link">
         <div class="impact-link">
-          <a href="Take Action.html">MORE INFORMATION</a>
+          <a href="Take Action.html#volunteer-section">MORE INFORMATION</a>
         </div>
 </section>
 
