--- a/Take Action.html
+++ b/Take Action.html
@@ -63,7 +63,7 @@
       </div>
     </section>
 
-    <section class="donate-section">
+    <section id="donate-section" class="donate-section">
       <div
         style="display: flex; width: 100%; flex-direction: row; justify-content: space-between; align-items: center;">
         <h2>DONATE</h2>
@@ -96,7 +96,7 @@
       </div>
     </section>
 
-    <section class="volunteer-section">
+    <section id="volunteer-section" class="volunteer-section">
       <div
         style="display: flex; width: 100%; flex-direction: row; justify-content: space-between; align-items: center;">
         <h2>VOLUNTEER</h2>
